--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -13,6 +13,12 @@
 <p style="padding-left: 30px;">Exam (40%) - 建立包含操作流程影片、心得以及提供檔案下載的網頁後填回自評表單</p>
 <p style="padding-left: 30px;">Final Report (30%) - 利用網頁內容進行簡報並提交 pdf 格式書面報告, 完成後填回自評表單</p>
 <h1>Tasks</h1>
+<h2>task1</h2>
+<h2>task2</h2>
+<h2>task3</h2>
+<h2>task4</h2>
+<h2>task5</h2>
+<h2>task6</h2>
 <h1>Homework</h1>
 <p>作業 (30%)</p>
 <p>HW1 (5%): <span style="background-color: #ffff00;">建立由 Box 組成的平面四連桿機構 Webots 模擬場景</span></p>
