--- a/config/content.htm
+++ b/config/content.htm
@@ -17,6 +17,7 @@
 <h4>自行製作可攜程式系統</h4>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6-05e0mze30" width="560"></iframe></p>
 <h3>list</h3>
+<p><a href="https://mdecd2025.github.io/hw-ych0227/content/Brython.html?src=https://gist.githubusercontent.com/ych0227/1c7d57d6c6d14bd684ff0b8512084918/raw/bfe2d04d844a0c689ef7eb2f10402872798892f3/g7list">g7組員連結</a></p>
 <h2>task2</h2>
 <h2>task3</h2>
 <h2>task4</h2>
