--- a/content/list.html
+++ b/content/list.html
@@ -144,6 +144,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">task1 << <a href='task1.html'>Previous</a> <a href='task2.html'>Next</a> >> task2<br /><h1>list</h1>
 <p><a href="https://mdecd2025.github.io/hw-ych0227/content/Brython.html?src=https://gist.githubusercontent.com/ych0227/1c7d57d6c6d14bd684ff0b8512084918/raw/bfe2d04d844a0c689ef7eb2f10402872798892f3/g7list">g7組員連結</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SIJ93xBD0rA" width="560"></iframe></p>
 <br />task1 << <a href='task1.html'>Previous</a> <a href='task2.html'>Next</a> >> task2</div>
         
     <!-- footer -->
