--- a/content/About.html
+++ b/content/About.html
@@ -143,6 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='Tasks.html'>Next</a> >> Tasks<br /><h1>About</h1>
+<p>123</p>
 <p>課程名稱: 協同產品設計實習 - Collaborative Product Design Practice</p>
 <p>學員作業網站:<a class="Link--inTextBlock" href="https://mdecd2025.github.io/hw-ych0227/">https://mdecd2025.github.io/hw-ych0227/</a></p>
 <p>學員作業倉儲:<a href="https://github.com/mdecd2025/hw-ych0227">https://github.com/mdecd2025/hw-ych0227</a></p>
@@ -155,8 +156,7 @@ img.add_border {
 <p>課程評分:</p>
 <p style="padding-left: 30px;">Homework (30%) - 每週至少提交兩次與課程進度有關的內容, 完成後填回自評表單</p>
 <p style="padding-left: 30px;">Exam (40%) - 建立包含操作流程影片、心得以及提供檔案下載的網頁後填回自評表單</p>
-<p style="padding-left: 30px;">Final Report (30%) - 利用網頁內容進行簡報並提交 pdf 格式書面報告, 完成後填回自評表單</p>
-<br /> <a href='Tasks.html'>Next</a> >> Tasks</div>
+<p style="padding-left: 30px;">Final Report (30%) - 利用網頁內容進行簡報並提交 pdf 格式書面報告, 完成後填回自評表單</p><br /> <a href='Tasks.html'>Next</a> >> Tasks</div>
         
     <!-- footer -->
       <div class="container">
