--- a/config/content.htm
+++ b/config/content.htm
@@ -12,14 +12,15 @@
 <p>課程評分:</p>
 <p style="padding-left: 30px;">Homework (30%) - 每週至少提交兩次與課程進度有關的內容, 完成後填回自評表單</p>
 <p style="padding-left: 30px;">Exam (40%) - 建立包含操作流程影片、心得以及提供檔案下載的網頁後填回自評表單</p>
-<p style="padding-left: 30px;">Final Report (30%) - 利用網頁內容進行簡報並提交 pdf 格式書面報告, 完成後填回自評表單</p><h1>Tasks</h1>
+<p style="padding-left: 30px;">Final Report (30%) - 利用網頁內容進行簡報並提交 pdf 格式書面報告, 完成後填回自評表單</p>
+<h1>Tasks</h1>
 <h2>task1</h2>
 <h4>自行製作可攜程式系統</h4>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6-05e0mze30" width="560"></iframe></p>
 <h3>list</h3>
 <p><a href="https://mdecd2025.github.io/hw-ych0227/content/Brython.html?src=https://gist.githubusercontent.com/ych0227/1c7d57d6c6d14bd684ff0b8512084918/raw/81f479f706ee7a26d541bc0a96eacf35e12a5be8/g7list">g7組員連結</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SIJ93xBD0rA" width="560"></iframe></p>
-<h2>task2</h2>
+<br/>task2<br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MicVT_yuspw" width="560"></iframe>
 <h2>task3</h2>
 <h2>task4</h2>
 <h2>task5</h2>
