在task2加入近端操作影片

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,4 @@
 <h1>About</h1>
-<p>123</p>
 <p>課程名稱: 協同產品設計實習 - Collaborative Product Design Practice</p>
 <p>學員作業網站:<a class="Link--inTextBlock" href="https://mdecd2025.github.io/hw-ych0227/">https://mdecd2025.github.io/hw-ych0227/</a></p>
 <p>學員作業倉儲:<a href="https://github.com/mdecd2025/hw-ych0227">https://github.com/mdecd2025/hw-ych0227</a></p>
@@ -20,7 +19,7 @@
 <h3>list</h3>
 <p><a href="https://mdecd2025.github.io/hw-ych0227/content/Brython.html?src=https://gist.githubusercontent.com/ych0227/1c7d57d6c6d14bd684ff0b8512084918/raw/81f479f706ee7a26d541bc0a96eacf35e12a5be8/g7list">g7組員連結</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SIJ93xBD0rA" width="560"></iframe></p>
-<br/>task2<br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MicVT_yuspw" width="560"></iframe>
+<p><br/>task2<br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MicVT_yuspw" width="560"></iframe></p>
 <h2>task3</h2>
 <h2>task4</h2>
 <h2>task5</h2>
