--- a/content/list.html
+++ b/content/list.html
@@ -145,7 +145,7 @@ img.add_border {
     <div id="tipue_search_content">task1 << <a href='task1.html'>Previous</a> <a href='task3.html'>Next</a> >> task3<br /><h1>list</h1>
 <p><a href="https://mdecd2025.github.io/hw-ych0227/content/Brython.html?src=https://gist.githubusercontent.com/ych0227/1c7d57d6c6d14bd684ff0b8512084918/raw/81f479f706ee7a26d541bc0a96eacf35e12a5be8/g7list">g7組員連結</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SIJ93xBD0rA" width="560"></iframe></p>
-<br/>task2<br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MicVT_yuspw" width="560"></iframe>
+<p><br/>task2<br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MicVT_yuspw" width="560"></iframe></p>
 <br />task1 << <a href='task1.html'>Previous</a> <a href='task3.html'>Next</a> >> task3</div>
         
     <!-- footer -->
