--- a/config/content.htm
+++ b/config/content.htm
@@ -19,7 +19,9 @@
 <h3>list</h3>
 <p><a href="https://mdecd2025.github.io/hw-ych0227/content/Brython.html?src=https://gist.githubusercontent.com/ych0227/1c7d57d6c6d14bd684ff0b8512084918/raw/81f479f706ee7a26d541bc0a96eacf35e12a5be8/g7list">g7組員連結</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SIJ93xBD0rA" width="560"></iframe></p>
-<br/><br/>task2<br/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MicVT_yuspw" width="560"></iframe>
+<h4>自行製作可攜程式系統</h4>
+<h2><span style="font-size: 11px;">task2</span></h2>
+<iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MicVT_yuspw" width="560"></iframe>
 <h2>task3</h2>
 <h2>task4</h2>
 <h2>task5</h2>
