--- a/content/list.html
+++ b/content/list.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Tasks.html'>Tasks</a><ul class='dropdown'><li class='has-children'><a href='task1.html'>task1</a><ul class='dropdown'><li><a href='list.html'>list</a></li></ul><li><a href='task2.html'>task2</a><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a><li><a href='task6.html'>task6</a></li></ul><li class='has-children'><a href='Homework.html'>Homework</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a></li></ul><li><a href='Midterm.html'>Midterm</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li><a href='Exam3.html'>Exam3</a></li></ul><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Tasks.html'>Tasks</a><ul class='dropdown'><li class='has-children'><a href='task1.html'>task1</a><ul class='dropdown'><li><a href='list.html'>list</a></li></ul><li class='has-children'><a href='task2.html'>task2</a><ul class='dropdown'><li><a href='ipv6.html'>ipv6</a></li></ul><li><a href='task3.html'>task3</a><li><a href='task4.html'>task4</a><li><a href='task5.html'>task5</a><li><a href='task6.html'>task6</a></li></ul><li class='has-children'><a href='Homework.html'>Homework</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a></li></ul><li><a href='Midterm.html'>Midterm</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li><a href='Exam3.html'>Exam3</a></li></ul><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -145,7 +145,6 @@ img.add_border {
     <div id="tipue_search_content">task1 << <a href='task1.html'>Previous</a> <a href='task2.html'>Next</a> >> task2<br /><h1>list</h1>
 <p><a href="https://mdecd2025.github.io/hw-ych0227/content/Brython.html?src=https://gist.githubusercontent.com/ych0227/1c7d57d6c6d14bd684ff0b8512084918/raw/81f479f706ee7a26d541bc0a96eacf35e12a5be8/g7list">g7組員連結</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SIJ93xBD0rA" width="560"></iframe></p>
-<h4>自行製作可攜程式系統</h4>
 <br />task1 << <a href='task1.html'>Previous</a> <a href='task2.html'>Next</a> >> task2</div>
         
     <!-- footer -->
