加入四連桿零件圖檔

--- a/config/content.htm
+++ b/config/content.htm
@@ -25,6 +25,7 @@
 <h3>ipv6</h3>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Tv0O9StPOjk" width="560"></iframe></p>
 <h2>task3</h2>
+<p><a href="/downloads/四連桿零件.7z">/downloads/四連桿零件.7z</a></p>
 <h2>task4</h2>
 <h2>task5</h2>
 <h2>task6</h2>
