--- a/content/task3.html
+++ b/content/task3.html
@@ -143,6 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">ipv6 << <a href='ipv6.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1>
+<p><a href="./../downloads/四連桿零件.7z">/downloads/四連桿零件.7z</a></p>
 <br />ipv6 << <a href='ipv6.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
