--- a/content/task3.html
+++ b/content/task3.html
@@ -144,6 +144,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">ipv6 << <a href='ipv6.html'>Previous</a> <a href='task4.html'>Next</a> >> task4<br /><h1>task3</h1>
 <p><a href="./../downloads/四連桿零件.7z">/downloads/四連桿零件.7z</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7e04KkqZ8X4" width="560"></iframe></p>
 <br />ipv6 << <a href='ipv6.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
