--- a/config/content.htm
+++ b/config/content.htm
@@ -27,6 +27,9 @@
 <h2>task3</h2>
 <p><a href="/downloads/四連桿零件.7z">/downloads/四連桿零件.7z</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7e04KkqZ8X4" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/tPSJT992NgQ" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/UPEBc6VMRrA" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/88g9k0tnmPw" width="560"></iframe></p>
 <h2>task4</h2>
 <h2>task5</h2>
 <h2>task6</h2>
