加入四連桿零件影片shaft1-2

--- a/config/content.htm
+++ b/config/content.htm
@@ -30,6 +30,8 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/tPSJT992NgQ" width="560"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/UPEBc6VMRrA" width="560"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/88g9k0tnmPw" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/w3vLuJ1DLTk" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9TF-9ivlhxI" width="560"></iframe></p>
 <h2>task4</h2>
 <h2>task5</h2>
 <h2>task6</h2>
