--- a/content/task3.html
+++ b/content/task3.html
@@ -148,6 +148,8 @@ img.add_border {
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/tPSJT992NgQ" width="560"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/UPEBc6VMRrA" width="560"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/88g9k0tnmPw" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/w3vLuJ1DLTk" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9TF-9ivlhxI" width="560"></iframe></p>
 <br />ipv6 << <a href='ipv6.html'>Previous</a> <a href='task4.html'>Next</a> >> task4</div>
         
     <!-- footer -->
